<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_customer_name_order_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_name" />

        <TextView
            android:id="@+id/txt_customer_mobile_order_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number" />

        <TextView
            android:id="@+id/txt_customer_address_order_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <TextView
            android:id="@+id/txt_customer_email_order_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requested_list" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price2"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/txt_price_order_cardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rs" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_founds_order_cardview"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_action_ok"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:background="@drawable/rounded_r_border2"
                android:backgroundTint="#03A9F4"
                android:text="@string/accept"
                android:textColor="@color/cardview_light_background" />

            <Button
                android:id="@+id/btn_action_cancel"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rounded_r_border"
                android:text="@string/reject"
                android:textColor="@color/cardview_light_background" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>