<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E6E7"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:background="#E3E6E7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="200dp"
            android:background="#E3E6E7"
            android:orientation="vertical">

        </LinearLayout>

        <RelativeLayout


            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="30dp"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="30dp"
                android:padding="20dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="35dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignStart="@+id/cardView">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <EditText
                            android:id="@+id/txtSellerName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:ems="10"
                            android:hint="@string/enter_name"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/txtSellerEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ems="10"
                            android:hint="@string/enter_email"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/txtShopName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ems="10"
                            android:hint="@string/enter_shop_name"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/txtSellerAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ems="10"
                            android:hint="@string/enter_shop_address"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/txtSellerMobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ems="10"
                            android:hint="@string/enter_mobile_number"
                            android:inputType="phone"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/txtSellerPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ems="10"
                            android:hint="@string/enter_password"
                            android:inputType="textPassword"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/txtSellerConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ems="10"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:textSize="14sp" />

                        <Button
                            android:id="@+id/btnSetLocation"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/rounded_r_border2"
                            android:backgroundTint="#8BC34A"
                            android:text="@string/set_shop_location"
                            android:textColor="#FDFDFD" />

                        <Button
                            android:id="@+id/btnSellerNext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/rounded_r_border2"
                            android:backgroundTint="#009688"
                            android:fontFamily="casual"
                            android:text="@string/next"
                            android:textColor="@color/cardview_light_background"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="229dp"
                android:layout_height="101dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:srcCompat="@drawable/sellericon" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="367dp"
                android:layout_height="94dp"
                android:autoSizeMaxTextSize="36dp"
                android:autoSizeMinTextSize="25dp"
                android:text="@string/sign_up_as_seller"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

</LinearLayout>