<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E6E7"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:background="#E3E6E7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="200dp"
            android:background="#E3E6E7"
            android:orientation="vertical">

        </LinearLayout>

        <RelativeLayout


            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginStart="30dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="30dp"
                android:padding="20dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="35dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignStart="@+id/cardView"

                    android:layout_marginTop="35dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtBuyerEmail"
                    app:layout_constraintTop_toBottomOf="@+id/txtBuyerEmail">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="50dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.51"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.13">

                        <EditText
                            android:id="@+id/txtBuyerName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/enter_name"
                            android:inputType="textPersonName"
                            android:padding="10dp"
                            android:paddingVertical="20dp"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/txtBuyerEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/enter_email"
                            android:inputType="textPersonName"
                            android:padding="10dp"
                            android:paddingVertical="20dp"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/txtBuyerMobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/enter_mobile_number"
                            android:inputType="phone"
                            android:padding="10dp"
                            android:paddingVertical="20dp"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/txtBuyerAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/enter_address"
                            android:inputType="textPersonName"
                            android:padding="10dp"
                            android:paddingVertical="20dp"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/txtBuyerPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/enter_password"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:paddingVertical="20dp"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/txtBuyerConfirmPassowrd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"


                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:paddingVertical="20dp"
                            android:textSize="14sp" />

                        <Button
                            android:id="@+id/btnBuyerNext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"

                            android:layout_marginHorizontal="10dp"
                            android:background="@drawable/rounded_r_border2"
                            android:fontFamily="casual"
                            android:text="@string/next"
                            android:textAlignment="center"
                            android:textColor="@color/cardview_light_background"
                            android:textSize="10sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="363dp"
                android:layout_height="87dp"
                android:text="@string/sign_up_as_buyer"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="294dp"
                android:layout_height="110dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:srcCompat="@drawable/buyericon" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

</LinearLayout>